Обновлен View ModeClassic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
     <string name="text_switch_mult">Умножение и деление</string>
     <string name="text_switch_pow">Возведение в степень</string>
     <string name="select_num_oper">Выберите количество операций</string>
-    <string name="begin">начать</string>
+    <string name="begin">START</string>
     <string name="go">GO</string>
 </resources>
